     states from the func_devstate module that provides the DEVICE_STATE() function
     and handling of the "Custom:" devices.
  * New CLI command: "sip show sched" which shows all ast_sched entries for sip,
    sorted into the different possible callbacks, with the number of entries
    currently scheduled for each. Gives you a feel for how busy the sip channel
    driver is.

SIP changes
-----------
  * Improved NAT and STUN support.
     chan_sip now can use port numbers in bindaddr, externip and externhost
     options, as well as contact a STUN server to detect its external address
     for the SIP socket. See sip.conf.sample, 'NAT' section.
  * The default SIP useragent= identifier now includes the Asterisk version
  * A new option, match_auth_username in sip.conf changes the matching of incoming requests.
     If set, and the incoming request carries authentication info,
     the username to match in the users list is taken from the Digest header
     rather than from the From: field. This feature is considered experimental.
  * The "musiconhold" and "musicclass" settings in sip.conf are now removed,
     since they where replaced by "mohsuggest" and "mohinterpret" in version 1.4
  * The "localmask" setting was removed in version 1.2 and the reminder about it
     being removed is now also removed.
  * A new option "busylevel" for setting a level of calls where asterisk reports
     a device as busy, to separate it from call-limit. This value is also added
     to the SIP_PEER dialplan function.
  * A new realtime family called "sipregs" is now supported to store SIP registration
     data. If this family is defined, "sippeers" will be used for configuration and
     "sipregs" for registrations. If it's not defined, "sippeers" will be used for
     registration data, as before.
  * The SIPPEER function have new options for port address, call and pickup groups
  * Added support for T.140 realtime text in SIP/RTP